# cmake-kernel-module-template

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindKernelHeaders.cmake
src/: main.c
src/char_device/: char_device.c  char_device.h
